ingress/kuard-ingress.yaml
# Assumes ingress controller is already running
# Make sure to replace IP of Ingress Controller Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
  labels:
    app: kuard
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - name: kuard
        image: gcr.io/kuar-demo/kuard-amd64:1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  labels:
    name: kuard
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: kuard
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
spec:
  rules:
  - host: kuard.52.252.208.221.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kuard
          servicePort: 80
